[package]
name        = "aips-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aips"
path = "src/main.rs"

[dependencies]
aips-core  = { path = "../aips-core" }
aips-proxy = { path = "../aips-proxy" }
aips-l7    = { path = "../aips-l7" }
aips-rules = { path = "../aips-rules" }
clap       = { workspace = true }
serde      = { workspace = true }
toml       = { workspace = true }
log        = { workspace = true }
env_logger = "0.11"
httparse   = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aips-phy-linux = { path = "../aips-phy-linux" }

[target.'cfg(target_os = "macos")'.dependencies]
aips-phy-macos = { path = "../aips-phy-macos" }

[dev-dependencies]
criterion = "0.5"
smoltcp = { workspace = true }

[[bench]]
name = "pipeline_bench"
harness = false

[[bench]]
name = "attack_bench"
harness = false

