[package]
name        = "aips-l7"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
httparse     = { workspace = true }
nom          = { workspace = true }
tls-parser   = { workspace = true }
heapless     = { workspace = true }
log          = { workspace = true }
aips-rules   = { path = "../aips-rules" }
aips-core    = { path = "../aips-core" }

[features]
default = []
alloc   = []
