[package]
name        = "aips-phy-baremetal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aips-core = { path = "../aips-core" }
smoltcp   = "0.13.0"

[features]
default = []
# Enable for STM32H7 EMAC DMA stub
stm32h7 = []
# Enable for ESP32 EMAC stub
esp32 = []
