[package]
name        = "aips-phy-linux"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aips-core = { path = "../aips-core" }
smoltcp   = { workspace = true }
log       = { workspace = true }
libc      = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
