[package]
name        = "aips-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aips-core = { path = "../aips-core" }
aips-l7   = { path = "../aips-l7" }
aips-rules = { path = "../aips-rules" }
smoltcp   = { workspace = true }
heapless  = { workspace = true }
log       = { workspace = true }
httparse  = { workspace = true }
